<resources>
    <string name="app_name">FourSquare</string>
    <string name="hometitle">Square</string>
    <string name="hometitle2">4</string>
    <string name="rulebutton">Rules</string>
    <string name="playbutton">Play</string>
    <string name="NameHint">Your Name</string>
    <string name="square">square</string>
    <string name="four">4</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="nametitle">ENTER YOUR NAMES</string>
    <string name="homebutton">Home</string>
    <string name="rules">RULES</string>
    <string name="ruleText1">How To Play</string>
    <string name="ruleText2">Both players first move can only be in one of the outer squares. there after players can use the whole board</string>
    <string name="ruleText3">How to win</string>
    <string name="ruleText4">if one player has 3 symbols in a row(diagonally, horizontally or vertically) they have won. if no player have achieved by the end of the game then it is a draw</string>
    <string name="retrybutton">Retry</string>
    <string name="gameOver">GAME OVER</string>
    <string name="playAgain">Retry</string>
    <string name="results">IT WAS A DRAW!!!</string>
    <string name="outsideblock">_</string>
    <string name="insideblock">-</string>
</resources>