<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Game">

    <Button
        android:id="@+id/button4"
        android:layout_width="368dp"
        android:layout_height="370dp"
        android:background="#FD0056"
        android:text="@string/outsideblock"
        android:textColor="#FD0056"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/gamebutton32"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:longClickable="false"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=""
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebutton22" />

    <Button
        android:id="@+id/gamebutton33"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=""
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebutton23" />

    <Button
        android:id="@+id/buttonretry"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="628dp"
        android:background="@drawable/redbutton"
        android:onClick="Retry"
        android:text="@string/playAgain"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="10dp"
        app:iconTint="#F10A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#E40707" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="628dp"
        android:background="@drawable/redbutton"
        android:onClick="homebutton3tap"
        android:text="@string/homebutton"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gamebutton22"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=" "
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebutton12" />

    <Button
        android:id="@+id/gamebutton23"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=""
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebutton13" />

    <Button
        android:id="@+id/gamebutton21"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=" "
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebutton11" />

    <Button
        android:id="@+id/gamebutton20"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=""
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebutton10" />

    <Button
        android:id="@+id/gamebutton12"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=" "
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebutton02" />

    <Button
        android:id="@+id/gamebutton13"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=""
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebutton03" />

    <Button
        android:id="@+id/gamebutton11"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=" "
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebutton01" />

    <Button
        android:id="@+id/gamebutton10"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=""
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebutton00" />

    <Button
        android:id="@+id/gamebutton00"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="onClick"
        android:text=""
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/gamebutton02"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="52dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=""
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/gamebutton31"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=""
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebutton21" />

    <Button
        android:id="@+id/gamebutton03"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="9dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=""
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/gamebutton01"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="21dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=""
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/gamebutton30"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="onClick"
        android:shadowColor="#E91E63"
        android:text=""
        android:textColor="#EDEFF6"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebutton20" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text=""
        android:textColor="#32FFEC"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>